--- a/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
+++ b/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
@@ -187,8 +187,8 @@
    "source": [
     "df = df.select(\n",
     "    df[\"embedding\"],\n",
-    "    df[\"meta.url\"],\n",
-    "    df[\"meta.question_score\"],\n",
+    "    df[\"meta\"].struct.get(\"url\"),\n",
+    "    df[\"meta\"].struct.get(\"question_score\"),\n",
     ")"
    ]
   },
