docs: change all mentions of getdaft -> daft

--- a/docs/mkdocs/10min.ipynb
+++ b/docs/mkdocs/10min.ipynb
@@ -56,7 +56,7 @@
       },
       "outputs": [],
       "source": [
-        "%pip install getdaft"
+        "%pip install daft"
       ]
     },
     {
