--- a/docs/mkdocs/quickstart.ipynb
+++ b/docs/mkdocs/quickstart.ipynb
@@ -28,7 +28,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pip install getdaft"
+        "pip install daft"
       ]
     },
     {
