--- a/tutorials/image_querying/top_n_red_color.ipynb
+++ b/tutorials/image_querying/top_n_red_color.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install getdaft[aws,ray]\n",
+    "!pip install daft[aws,ray]\n",
     "!pip install Pillow numpy"
    ]
   },
