--- a/tutorials/mnist.ipynb
+++ b/tutorials/mnist.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install getdaft\n",
+    "%pip install daft\n",
     "%pip install Pillow torch torchvision"
    ]
   },
