--- a/tutorials/talks_and_demos/data-ai-summit-2024.ipynb
+++ b/tutorials/talks_and_demos/data-ai-summit-2024.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install getdaft deltalake<0.17"
+    "!pip install daft deltalake<0.17"
    ]
   },
   {
