--- a/tutorials/text_to_image/text_to_image_generation.ipynb
+++ b/tutorials/text_to_image/text_to_image_generation.ipynb
@@ -14,7 +14,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install getdaft --pre --extra-index-url https://pypi.anaconda.org/daft-nightly/simple\n",
+    "!pip install daft --pre --extra-index-url https://pypi.anaconda.org/daft-nightly/simple\n",
     "!pip install min-dalle torch Pillow"
    ]
   },
