--- a/tutorials/text_to_image/using_cloud_with_ray.ipynb
+++ b/tutorials/text_to_image/using_cloud_with_ray.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install getdaft[ray]\n",
+    "!pip install daft[ray]\n",
     "!pip install Pillow"
    ]
   },
