Cleanup more locations

--- a/tutorials/delta_lake/3-pytorch-ray-single-node-training.ipynb
+++ b/tutorials/delta_lake/3-pytorch-ray-single-node-training.ipynb
@@ -121,7 +121,7 @@
     "        address=RAY_ADDRESS,\n",
     "        runtime_env={\n",
     "            \"pip\": [\n",
-    "                \"getdaft\",\n",
+    "                \"daft\",\n",
     "                \"torch\",\n",
     "                \"torchvision\",\n",
     "            ]\n",
