--- a/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
+++ b/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# Install Daft!\n",
-    "!pip install 'getdaft[aws]'\n",
+    "!pip install 'daft[aws]'\n",
     "\n",
     "# We will use sentence-transformers for computing embeddings.\n",
     "!pip install sentence-transformers"
