--- a/tutorials/talks_and_demos/iceberg_summit_2024.ipynb
+++ b/tutorials/talks_and_demos/iceberg_summit_2024.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "!pip install 'pyiceberg[sql]'\n",
-    "!pip install 'getdaft[ray]' polars pandas\n",
+    "!pip install 'daft[ray]' polars pandas\n",
     "!pip install ray==2.20.0\n",
     "!pip install sqlalchemy ipywidgets boto3 mypy_boto3_glue"
    ]
