--- a/tutorials/talks_and_demos/linkedin-03-05-2024.ipynb
+++ b/tutorials/talks_and_demos/linkedin-03-05-2024.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U 'getdaft[iceberg,hudi,deltalake]'\n",
+    "!pip install -U 'daft[iceberg,hudi,deltalake]'\n",
     "!pip install -U ipywidgets"
    ]
   },
