--- a/tutorials/text_to_image/text_to_image_generation.ipynb
+++ b/tutorials/text_to_image/text_to_image_generation.ipynb
@@ -179,10 +179,11 @@
     "# Filter for images with longer descriptions\n",
     "parquet_df_with_long_strings = parquet_df.where(parquet_df[\"TEXT\"].str.length() > 50)\n",
     "\n",
-    "# Download images\n",
+    "# Download images, setting the value to null if there are issues with downloading (e.g. the URL is broken),\n",
+    "# or if there are issues with decoding the image\n",
     "images_df = parquet_df_with_long_strings.with_column(\n",
     "    \"image\",\n",
-    "    parquet_df[\"URL\"].url.download().image.decode(),\n",
+    "    parquet_df[\"URL\"].url.download(on_error=\"null\").image.decode(on_error=\"null\"),\n",
     ")"
    ]
   },
@@ -306,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.9"
   },
   "vscode": {
    "interpreter": {
