--- a/tutorials/text_to_image/text_to_image_generation.ipynb
+++ b/tutorials/text_to_image/text_to_image_generation.ipynb
@@ -183,7 +183,7 @@
     "# or if there are issues with decoding the image\n",
     "images_df = parquet_df_with_long_strings.with_column(\n",
     "    \"image\",\n",
-    "    parquet_df[\"URL\"].url.download(on_error=\"null\").image.decode(on_error=\"null\"),\n",
+    "    parquet_df_with_long_strings[\"URL\"].url.download(on_error=\"null\").image.decode(on_error=\"null\"),\n",
     ")"
    ]
   },
