--- a/tutorials/image_querying/top_n_red_color.ipynb
+++ b/tutorials/image_querying/top_n_red_color.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install getdaft[aws,ray]\n",
+    "!pip install daft[aws,ray]\n",
     "!pip install Pillow numpy"
    ]
   },
@@ -87,7 +87,7 @@
     "\n",
     "    ray.init(\n",
     "        address=RAY_CLUSTER_ADDRESS,\n",
-    "        runtime_env={\"pip\": [\"getdaft\", \"pillow\", \"s3fs\"]},\n",
+    "        runtime_env={\"pip\": [\"daft\", \"pillow\", \"s3fs\"]},\n",
     "    )\n",
     "\n",
     "    daft.context.set_runner_ray(address=RAY_CLUSTER_ADDRESS)"
