Add more cleanup

--- a/docs/mkdocs/10min.ipynb
+++ b/docs/mkdocs/10min.ipynb
@@ -1594,8 +1594,7 @@
         "        self.model.eval().to(torch.device(\"cpu\"))\n",
         "\n",
         "    def __call__(self, images_urls):\n",
-        "        uris = images_urls.to_pylist()\n",
-        "        batch = torch.cat([self.utils.prepare_input_from_uri(uri) for uri in uris]).to(torch.device(\"cpu\"))\n",
+        "        batch = torch.cat([self.utils.prepare_input_from_uri(uri) for uri in images_urls]).to(torch.device(\"cpu\"))\n",
         "\n",
         "        with torch.no_grad():\n",
         "            output = torch.nn.functional.softmax(self.model(batch), dim=1)\n",
