--- a/tutorials/text_to_image/text_to_image_generation.ipynb
+++ b/tutorials/text_to_image/text_to_image_generation.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "!pip install daft --pre --extra-index-url https://pypi.anaconda.org/daft-nightly/simple\n",
-    "!pip install diffusers torch Pillow"
+    "!pip install transformers diffusers torch Pillow"
    ]
   },
   {
