--- a/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
+++ b/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
@@ -112,7 +112,7 @@
     "if CI:\n",
     "    df = df.limit(500)\n",
     "\n",
-    "print(df)"
+    "df"
    ]
   },
   {
@@ -316,8 +316,8 @@
     "df = df.select(\n",
     "    df[\"url\"],\n",
     "    df[\"question_score\"],\n",
-    "    df[\"search_result.related_top_question\"].alias(\"related_top_question\"),\n",
-    "    df[\"search_result.similarity\"].alias(\"similarity\"),\n",
+    "    df[\"search_result\"][\"related_top_question\"].alias(\"related_top_question\"),\n",
+    "    df[\"search_result\"][\"similarity\"].alias(\"similarity\"),\n",
     ")"
    ]
   },
