--- a/tutorials/text_to_image/text_to_image_generation.ipynb
+++ b/tutorials/text_to_image/text_to_image_generation.ipynb
@@ -252,6 +252,7 @@
     "        self.pipe = StableDiffusionPipeline.from_pretrained(\n",
     "            model_id,\n",
     "            torch_dtype=torch.float32,\n",
+    "            low_cpu_mem_usage=False,\n",
     "        )\n",
     "        self.pipe.enable_attention_slicing(1)\n",
     "\n",
