--- a/tutorials/text_to_image/text_to_image_generation.ipynb
+++ b/tutorials/text_to_image/text_to_image_generation.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "!pip install daft --pre --extra-index-url https://pypi.anaconda.org/daft-nightly/simple\n",
-    "!pip install transformers diffusers torch Pillow"
+    "!pip install transformers diffusers accelerate torch Pillow"
    ]
   },
   {
@@ -252,7 +252,6 @@
     "        self.pipe = StableDiffusionPipeline.from_pretrained(\n",
     "            model_id,\n",
     "            torch_dtype=torch.float32,\n",
-    "            low_cpu_mem_usage=False,\n",
     "        )\n",
     "        self.pipe.enable_attention_slicing(1)\n",
     "\n",
