--- a/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
+++ b/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
@@ -39,7 +39,7 @@
     "!pip install 'daft[aws]'\n",
     "\n",
     "# We will use sentence-transformers for computing embeddings.\n",
-    "!pip install sentence-transformers"
+    "!pip install sentence-transformers accelerate"
    ]
   },
   {
