docs: Fix tutorial notebooks (#4161)
## Changes Made

Our tutorial notebooks were out of date due to:
- breaking changes with struct syntactic sugar
- using `Series.to_pylist()` instead of Series iterators
- mini DALL-E being too large for CI (I switched to Stable Diffusion)
- in general dataframes were too large for CI
- broken image urls

## Related Issues

Fixes CI

## Checklist

- [x] Documented in API Docs (if applicable)
- [x] Documented in User Guide (if applicable)
- [x] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [x] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

@ccmao1130 I updated the docs but not sure if that also updates
getdaft.io

--- a/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
+++ b/tutorials/embeddings/daft_tutorial_embeddings_stackexchange.ipynb
@@ -39,7 +39,7 @@
     "!pip install 'daft[aws]'\n",
     "\n",
     "# We will use sentence-transformers for computing embeddings.\n",
-    "!pip install sentence-transformers"
+    "!pip install sentence-transformers accelerate"
    ]
   },
   {
@@ -110,9 +110,9 @@
     "df = daft.read_json(SAMPLE_DATA_PATH, io_config=IO_CONFIG)\n",
     "\n",
     "if CI:\n",
-    "    df = df.limit(500)\n",
+    "    df = df.limit(100)\n",
     "\n",
-    "print(df)"
+    "df"
    ]
   },
   {
@@ -316,8 +316,8 @@
     "df = df.select(\n",
     "    df[\"url\"],\n",
     "    df[\"question_score\"],\n",
-    "    df[\"search_result.related_top_question\"].alias(\"related_top_question\"),\n",
-    "    df[\"search_result.similarity\"].alias(\"similarity\"),\n",
+    "    df[\"search_result\"][\"related_top_question\"].alias(\"related_top_question\"),\n",
+    "    df[\"search_result\"][\"similarity\"].alias(\"similarity\"),\n",
     ")"
    ]
   },
