add pip install

--- a/tutorials/window_functions/demo.ipynb
+++ b/tutorials/window_functions/demo.ipynb
@@ -16,7 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install matplotlib pandas daft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
