small fix, didnt go thru notebook yet

--- a/docs/fotw/00-data-access.ipynb
+++ b/docs/fotw/00-data-access.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3e823b2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/chanchan/Daft/.venv/bin/python3: No module named pip\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install daft"
    ]
@@ -39,58 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e21c8e49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install daft\n",
-    "!uv pip install validators matplotlib Pillow torch torchvision\n",
-    "\n",
-    "\n",
-    "import daft\n",
-    "\n",
-    "# Read parquet file containing sample dog owners\n",
-    "df = daft.read_parquet(\"s3://daft-public-data/tutorials/10-min/sample-data-dog-owners-partitioned.pq/**\")\n",
-    "\n",
-    "# Combine \"first_name\" and \"last_name\" to create new column \"full_name\"\n",
-    "df = df.with_column(\"full_name\", daft.col(\"first_name\") + \" \" + daft.col(\"last_name\"))\n",
-    "df.select(\"full_name\", \"age\", \"country\", \"has_dog\").show()\n",
-    "\n",
-    "# Create dataframe of dogs\n",
-    "df_dogs = daft.from_pydict(\n",
-    "    {\n",
-    "        \"urls\": [\n",
-    "            \"https://live.staticflickr.com/65535/53671838774_03ba68d203_o.jpg\",\n",
-    "            \"https://live.staticflickr.com/65535/53671700073_2c9441422e_o.jpg\",\n",
-    "            \"https://live.staticflickr.com/65535/53670606332_1ea5f2ce68_o.jpg\",\n",
-    "            \"https://live.staticflickr.com/65535/53671838039_b97411a441_o.jpg\",\n",
-    "            \"https://live.staticflickr.com/65535/53671698613_0230f8af3c_o.jpg\",\n",
-    "        ],\n",
-    "        \"full_name\": [\n",
-    "            \"Ernesto Evergreen\",\n",
-    "            \"James Jale\",\n",
-    "            \"Wolfgang Winter\",\n",
-    "            \"Shandra Shamas\",\n",
-    "            \"Zaya Zaphora\",\n",
-    "        ],\n",
-    "        \"dog_name\": [\"Ernie\", \"Jackie\", \"Wolfie\", \"Shaggie\", \"Zadie\"],\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "# Join owners with dogs\n",
-    "df_family = df.join(df_dogs, on=\"full_name\").exclude(\"first_name\", \"last_name\", \"DoB\", \"country\", \"age\")\n",
-    "\n",
-    "df_family = df_family.with_column(\"image_bytes\", df_dogs[\"urls\"].url.download(on_error=\"null\"))\n",
-    "\n",
-    "df_family_decpde = df_family.with_column(\"image\", df_family[\"image_bytes\"].image.decode())\n",
-    "\n",
-    "\n",
-    "df_family.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b98f0369-4304-416d-9db9-d2e191be96c1",
    "metadata": {},
@@ -109,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c9ccf99f-de05-4ec2-b4d0-ce2e6be57b5a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7f2eb317-bbf2-4b78-b888-7659fc9f637e",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +958,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
