trying hide cell input

--- a/tutorials/window_functions/window_functions.ipynb
+++ b/tutorials/window_functions/window_functions.ipynb
@@ -319,7 +319,7 @@
      "slide_type": ""
     },
     "tags": [
-     "hide-cell"
+     "hide-input"
     ]
    },
    "outputs": [
@@ -578,9 +578,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "editable": true,
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -730,9 +737,16 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "editable": true,
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -892,10 +906,16 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "editable": true,
     "jupyter": {
      "source_hidden": true
     },
-    "scrolled": true
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -1043,9 +1063,16 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "editable": true,
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
