Cleanup pr more

--- a/tutorials/image_querying/top_n_red_color.ipynb
+++ b/tutorials/image_querying/top_n_red_color.ipynb
@@ -456,6 +456,9 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "def sum_mask(mask: PIL.Image.Image) -> int:\n",
     "    val = np.asarray(mask).sum()\n",
     "    return int(val)\n",
