--- a/tutorials/window_functions/window_functions.ipynb
+++ b/tutorials/window_functions/window_functions.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "Window functions allow you to perform calculations across a set of rows related to the current row. These calculations happen within a defined \"window\" of data, giving developers and analysts the ability to create running totals, rankings, and comparisons without altering the dataset.\n",
     "\n",
-    "In this tutorial, we'll explore how [Daft's window functions](https://www.getdaft.io/projects/docs/en/stable/core_concepts/#window-functions) can transform complex analytical challenges into elegant solutions. We'll follow an entertaining twist on a classic scenario -- a chocholate eating contest between a tortoise and a hare -- where we'll analyze their performance using different window function techniques. \n",
+    "In this tutorial, we'll explore how [Daft's window functions](https://docs.getdaft.io/en/stable/core_concepts/#window-functions) can transform complex analytical challenges into elegant solutions. We'll follow an entertaining twist on a classic scenario -- a chocholate eating contest between a tortoise and a hare -- where we'll analyze their performance using different window function techniques. \n",
     "\n",
     "Without window functions, these operations would require multiple self-joins, temporary tables, and complex aggregations. We'll demonstrate how window functions can reduce dozens of lines of complex code to just a few simple, readable lines.\n",
     "\n",
@@ -38,7 +38,7 @@
     "    * Analyzing moving windows of activity\n",
     "    * Computing cumulative totals\n",
     "\n",
-    "See also [Window Functions API Docs](https://www.getdaft.io/projects/docs/en/stable/api/window/) in Daft Documentation.\n",
+    "See also [Window Functions API Docs](https://docs.getdaft.io/en/stable/api/window/) in Daft Documentation.\n",
     "\n",
     "![image1.jpeg](image1.jpeg)"
    ]
@@ -496,7 +496,7 @@
     "\n",
     "*With* window functions, the same analysis is simplified:\n",
     "1. Define a window partitioned by contestant and ordered by chocolates (descending)\n",
-    "2. Apply the [`dense_rank()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.functions.dense_rank) function over this window\n",
+    "2. Apply the [`dense_rank()`](https://docs.getdaft.io/en/stable/api/window/#daft.functions.dense_rank) function over this window\n",
     "\n",
     "The window functions handles all the comparison logic internally, making our code more concise and more efficient."
    ]
@@ -659,7 +659,7 @@
     "3. Another join to get the chocolate count from that session\n",
     "4. Compute the difference\n",
     "\n",
-    "*With* window functions, we use the [`lag()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.expressions.Expression.lag) function to access the previous row in our ordered window. Here, `lag(1)` retrieves the value from *one row before* the current row in the window. This reduces our complex multi-join solution to just two lines of code.\n"
+    "*With* window functions, we use the [`lag()`](https://docs.getdaft.io/en/stable/api/window/#daft.expressions.Expression.lag) function to access the previous row in our ordered window. Here, `lag(1)` retrieves the value from *one row before* the current row in the window. This reduces our complex multi-join solution to just two lines of code.\n"
    ]
   },
   {
@@ -820,7 +820,7 @@
     "3. Separate filtering and sorting for each contestant\n",
     "4. Concatenation to combine results\n",
     "\n",
-    "*With* window functions, we introduce a powerful concept: the frame specification with [`rows_between()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.window.Window.rows_between). This lets us define precisely which rows to include in our window.\n",
+    "*With* window functions, we introduce a powerful concept: the frame specification with [`rows_between()`](https://docs.getdaft.io/en/stable/api/window/#daft.window.Window.rows_between). This lets us define precisely which rows to include in our window.\n",
     "\n",
     "The `.rows_between(-50,50)` specification tells Daft to include 50 rows before and 50 rows after the current row in the calculation. We need:\n",
     "1. Calculate the sum of chocolates within this window\n",
@@ -1187,7 +1187,7 @@
    "source": [
     "# SQL\n",
     "\n",
-    "For those more familiar with SQL, Daft also supports these window operations through SQL syntax. See also [Window Functions SQL Reference](https://www.getdaft.io/projects/docs/en/stable/sql/window_functions/) in Daft Documentation."
+    "For those more familiar with SQL, Daft also supports these window operations through SQL syntax. See also [Window Functions SQL Reference](https://docs.getdaft.io/en/stable/sql/window_functions/) in Daft Documentation."
    ]
   },
   {
@@ -1339,12 +1339,12 @@
     "4. **Flexibility**: We can easily combine different window specifications to answer a wide range of analytical questions.\n",
     "\n",
     "Key window function concepts we covered:\n",
-    "* Basic partitioning with [`partition_by()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.window.Window.partition_by)\n",
-    "* Ordering rows with partitions using [`order_by()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.window.Window.order_by)\n",
-    "* Defining custom frames with [`rows_between()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.window.Window.rows_between) and [`range_between()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.window.Window.range_between)\n",
-    "* Using aggregation functions ([`sum()`](https://www.getdaft.io/projects/docs/en/stable/api/aggregations/#daft.dataframe.dataframe.GroupedDataFrame.sum)) and ranking functions ([`rank()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.functions.rank) and [`dense_rank()`](https://www.getdaft.io/projects/docs/en/stable/api/window/#daft.functions.dense_rank))\n",
+    "* Basic partitioning with [`partition_by()`](https://docs.getdaft.io/en/stable/api/window/#daft.window.Window.partition_by)\n",
+    "* Ordering rows with partitions using [`order_by()`](https://docs.getdaft.io/en/stable/api/window/#daft.window.Window.order_by)\n",
+    "* Defining custom frames with [`rows_between()`](https://docs.getdaft.io/en/stable/api/window/#daft.window.Window.rows_between) and [`range_between()`](https://docs.getdaft.io/en/stable/api/window/#daft.window.Window.range_between)\n",
+    "* Using aggregation functions ([`sum()`](https://docs.getdaft.io/en/stable/api/aggregations/#daft.dataframe.dataframe.GroupedDataFrame.sum)) and ranking functions ([`rank()`](https://docs.getdaft.io/en/stable/api/window/#daft.functions.rank) and [`dense_rank()`](https://docs.getdaft.io/en/stable/api/window/#daft.functions.dense_rank))\n",
     "\n",
-    "If you find yourself writing complex self-joins or struggling with cummulative calculations, try [Daft's window functions](https://www.getdaft.io/projects/docs/en/stable/core_concepts/#window-functions) instead!"
+    "If you find yourself writing complex self-joins or struggling with cummulative calculations, try [Daft's window functions](https://docs.getdaft.io/en/stable/core_concepts/#window-functions) instead!"
    ]
   }
  ],
