fix: document processing notebook and explode expression docs

--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -228,7 +228,6 @@
     "import traceback\n",
     "from collections.abc import Iterator\n",
     "from datetime import datetime\n",
-    "from types import NoneType\n",
     "from typing import Any, Optional, Union, get_args, get_origin\n",
     "\n",
     "import fitz\n",
@@ -627,9 +626,9 @@
     "    if get_origin(f_type) is Union:\n",
     "        targs = get_args(f_type)\n",
     "        if len(targs) == 2:\n",
-    "            if targs[0] is NoneType and targs[1] is not NoneType:\n",
+    "            if targs[0] is type(None) and targs[1] is not type(None):\n",
     "                refined_inner = targs[1]\n",
-    "            elif targs[0] is not NoneType and targs[1] is NoneType:\n",
+    "            elif targs[0] is not type(None) and targs[1] is type(None):\n",
     "                refined_inner = targs[0]\n",
     "            else:\n",
     "                raise TypeError(f\"Cannot convert a general union type {f_type} into a pyarrow.DataType!\")\n",
