--- a/tutorials/window_functions/window_functions.ipynb
+++ b/tutorials/window_functions/window_functions.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install daft pandas matplotlib"
+    "!pip install daft pandas matplotlib"
    ]
   },
   {
