--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -1088,7 +1088,7 @@
     "        self.x_thresh = x_thresh\n",
     "        self.group_paragraphs = group_paragraphs\n",
     "\n",
-    "    def handle(self, doc: ParsedPdf | dict) -> Iterator[Processed]:\n",
+    "    def handle(self, doc: Union[ParsedPdf, dict]) -> Iterator[Processed]:\n",
     "        parsed_doc = ParsedPdf.model_validate(doc) if isinstance(doc, dict) else doc\n",
     "        for page_index, page in enumerate(parsed_doc.pages):\n",
     "            text_blocks = page_pipeline(\n",
