--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -281,7 +281,7 @@
     "df_sample = daft.from_glob_path(\n",
     "    \"s3://daft-public-data/tutorials/document-processing/industry_documents_library/pdfs/*\",\n",
     "    io_config=IO_CONFIG,\n",
-    ").limit(100)"
+    ").limit(10)"
    ]
   },
   {
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "df_sample.show(10)"
+    "df_sample.show()"
    ]
   },
   {
@@ -1730,7 +1730,7 @@
     "df = daft.from_glob_path(\n",
     "    \"s3://daft-public-data/tutorials/document-processing/industry_documents_library/pdfs/*\",\n",
     "    io_config=IO_CONFIG,\n",
-    ")\n",
+    ").limit(20)\n",
     "print(df.schema())"
    ]
   },
