--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -208,6 +208,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CI = False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "CiLAhoISymVh"
@@ -1730,7 +1739,11 @@
     "df = daft.from_glob_path(\n",
     "    \"s3://daft-public-data/tutorials/document-processing/industry_documents_library/pdfs/*\",\n",
     "    io_config=IO_CONFIG,\n",
-    ").limit(20)\n",
+    ")\n",
+    "\n",
+    "if CI:\n",
+    "    df = df.limit(10)\n",
+    "\n",
     "print(df.schema())"
    ]
   },
