fix: document processing notebook and explode expression docs (#4758)
## Changes Made

Some fixes for CI. Looks like `types.NoneType` was only added in python
3.10 and the notebook checker runs on 3.9, so changing the code to be
compatible with 3.9.

Also an issue with a dataset that managed to sneak in.

## Related Issues

none

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -208,6 +208,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CI = False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "CiLAhoISymVh"
@@ -228,7 +237,6 @@
     "import traceback\n",
     "from collections.abc import Iterator\n",
     "from datetime import datetime\n",
-    "from types import NoneType\n",
     "from typing import Any, Optional, Union, get_args, get_origin\n",
     "\n",
     "import fitz\n",
@@ -282,7 +290,7 @@
     "df_sample = daft.from_glob_path(\n",
     "    \"s3://daft-public-data/tutorials/document-processing/industry_documents_library/pdfs/*\",\n",
     "    io_config=IO_CONFIG,\n",
-    ").limit(100)"
+    ").limit(10)"
    ]
   },
   {
@@ -363,7 +371,7 @@
     }
    ],
    "source": [
-    "df_sample.show(10)"
+    "df_sample.show()"
    ]
   },
   {
@@ -627,9 +635,9 @@
     "    if get_origin(f_type) is Union:\n",
     "        targs = get_args(f_type)\n",
     "        if len(targs) == 2:\n",
-    "            if targs[0] is NoneType and targs[1] is not NoneType:\n",
+    "            if targs[0] is type(None) and targs[1] is not type(None):\n",
     "                refined_inner = targs[1]\n",
-    "            elif targs[0] is not NoneType and targs[1] is NoneType:\n",
+    "            elif targs[0] is not type(None) and targs[1] is type(None):\n",
     "                refined_inner = targs[0]\n",
     "            else:\n",
     "                raise TypeError(f\"Cannot convert a general union type {f_type} into a pyarrow.DataType!\")\n",
@@ -1089,7 +1097,7 @@
     "        self.x_thresh = x_thresh\n",
     "        self.group_paragraphs = group_paragraphs\n",
     "\n",
-    "    def handle(self, doc: ParsedPdf | dict) -> Iterator[Processed]:\n",
+    "    def handle(self, doc: Union[ParsedPdf, dict]) -> Iterator[Processed]:\n",
     "        parsed_doc = ParsedPdf.model_validate(doc) if isinstance(doc, dict) else doc\n",
     "        for page_index, page in enumerate(parsed_doc.pages):\n",
     "            text_blocks = page_pipeline(\n",
@@ -1732,6 +1740,10 @@
     "    \"s3://daft-public-data/tutorials/document-processing/industry_documents_library/pdfs/*\",\n",
     "    io_config=IO_CONFIG,\n",
     ")\n",
+    "\n",
+    "if CI:\n",
+    "    df = df.limit(10)\n",
+    "\n",
     "print(df.schema())"
    ]
   },
