--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -250,7 +250,8 @@
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "import daft\n",
-    "from daft import UDF, Series, col, udf"
+    "from daft import Series, col, udf\n",
+    "from daft.udf import UDF"
    ]
   },
   {
