docs: add more docs for UDF concurrency

--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -250,8 +250,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "import daft\n",
-    "from daft import Series, col, udf\n",
-    "from daft.udf import UDF"
+    "from daft import Series, col, udf"
    ]
   },
   {
@@ -1290,25 +1289,31 @@
    },
    "outputs": [],
    "source": [
-    "def text_embedder_udf(model: SentenceTransformer) -> UDF:\n",
-    "    dimensionality = model.get_sentence_embedding_dimension()\n",
-    "    assert dimensionality is not None, f\"Must supply model with known dimensionality. Invalid {model=}\"\n",
-    "    model = model.eval()\n",
-    "    try:\n",
-    "        model.compile()\n",
-    "    except Exception:\n",
-    "        print(\"Could not torch.compile the SentenceTransformer model. \" \"Proceeding with unoptimized inference.\")\n",
-    "        traceback.print_exc()\n",
+    "@udf(\n",
+    "    return_dtype=daft.DataType.embedding(daft.DataType.float32(), 384),\n",
+    "    num_gpus=1,\n",
+    "    concurrency=1,  # setting concurrency to initialize model once\n",
+    ")\n",
+    "class TextEmbedder:\n",
+    "    def __init__(self, model_name: str):\n",
+    "        model = SentenceTransformer(model_name)\n",
+    "        model.to(\"cuda\")\n",
+    "        model.eval()\n",
     "\n",
-    "    @udf(return_dtype=daft.DataType.embedding(daft.DataType.float32(), dimensionality))\n",
-    "    def embed(texts: Series) -> Series:\n",
+    "        try:\n",
+    "            model.compile()\n",
+    "        except Exception:\n",
+    "            print(\"Could not torch.compile the SentenceTransformer model. \" \"Proceeding with unoptimized inference.\")\n",
+    "            traceback.print_exc()\n",
+    "\n",
+    "        self.model = model\n",
+    "\n",
+    "    def __call__(self, texts: Series) -> Series:\n",
     "        with torch.no_grad():\n",
-    "            embeddings: np.ndarray[float] = model.encode(\n",
+    "            embeddings: np.ndarray[float] = self.model.encode(\n",
     "                texts.to_pylist(), convert_to_numpy=True, show_progress_bar=False\n",
     "            )\n",
-    "        return Series.from_numpy(embeddings)\n",
-    "\n",
-    "    return embed"
+    "        return Series.from_numpy(embeddings)"
    ]
   },
   {
@@ -1650,10 +1655,7 @@
     ")\n",
     "\n",
     "# The text embedding model to use. See HuggingFace for a more complete list!\n",
-    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
-    "\n",
-    "if torch.cuda.is_available():\n",
-    "    model = model.to(\"cuda\")"
+    "model_name = \"all-MiniLM-L6-v2\""
    ]
   },
   {
@@ -1689,11 +1691,7 @@
     "if page_limit is not None:\n",
     "    if page_limit <= 0:\n",
     "        raise ValueError(f\"Page limit must be positive if specified! Invalid: {page_limit=}\")\n",
-    "    print(f\"Limiting each PDF to the first {page_limit} pages.\")\n",
-    "\n",
-    "dimensionality = model.get_sentence_embedding_dimension()\n",
-    "assert dimensionality is not None, f\"Must supply model with known dimensionality. Invalid: {model=}\"\n",
-    "print(f\"Using a text embedding dimension of: {dimensionality}\")"
+    "    print(f\"Limiting each PDF to the first {page_limit} pages.\")"
    ]
   },
   {
@@ -2070,7 +2068,8 @@
    },
    "outputs": [],
    "source": [
-    "df = df.with_column(\"embeddings\", text_embedder_udf(model)(col(\"text\")))"
+    "embedder = TextEmbedder.with_init_args(model_name=model_name)\n",
+    "df = df.with_column(\"embeddings\", embedder(col(\"text\")))"
    ]
   },
   {
