getdaft.io -> daft.ai

--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -529,7 +529,7 @@
     "id": "Kd8vHnW-ykBh"
    },
    "source": [
-    "Daft knows about URLs and has built-in support for downloading their contents! This is exposed via the [`.url.download()` method](https://docs.daft.ai/en/stable/api/expressions/#daft.expressions.expressions.ExpressionUrlNamespace.download) on a column expression (that's the [`col('path')`](https://docs.getdaft.io/en/stable/api/expressions/#daft.expressions.col))."
+    "Daft knows about URLs and has built-in support for downloading their contents! This is exposed via the [`.url.download()`](https://docs.daft.ai/en/stable/api/expressions/#daft.expressions.expressions.ExpressionUrlNamespace.download) method on a column expression (that's the [`col('path')`](https://docs.daft.ai/en/stable/api/expressions/#daft.expressions.col))."
    ]
   },
   {
@@ -615,7 +615,7 @@
    "source": [
     "### Generating Daft Datatypes from Pydantic\n",
     "\n",
-    "We also need to define a function that will let us easily generate Daft DataTypes from our Pydantic classes using PyArrow. We'll use this function, `daft_pyarrow_datatype`, to let us automatically generate the [`daft.DataType`](https://docs.getdaft.io/en/v0.2.13/api_docs/datatype.html#):"
+    "We also need to define a function that will let us easily generate Daft DataTypes from our Pydantic classes using PyArrow. We'll use this function, `daft_pyarrow_datatype`, to let us automatically generate the [`daft.DataType`](https://docs.daft.ai/en/stable/api/datatypes/):"
    ]
   },
   {
@@ -1856,7 +1856,7 @@
    "source": [
     "#### UDF Application\n",
     "\n",
-    "A note on how Daft works -- in our above UDF application, we're providing [column expressions](https://docs.getdaft.io/en/stable/core_concepts/#exploding-columns) as input. Specifically, the [`col`](https://docs.getdaft.io/en/stable/api/expressions/#daft.expressions.col) part. When we write `col(\"url\")`, we're telling Daft to wire things up under the hood to reference the data in the `url` column of the dataframe.\n",
+    "A note on how Daft works -- in our above UDF application, we're providing column expressions as input. Specifically, the [`col`](https://docs.daft.ai/en/stable/api/expressions/#daft.expressions.col) part. When we write `col(\"url\")`, we're telling Daft to wire things up under the hood to reference the data in the `url` column of the dataframe.\n",
     "\n",
     "Breaking down the PDF loading and parsing UDF call, the first part is actually constructing the UDF instance:\n",
     "```python\n",
@@ -1978,7 +1978,7 @@
    "source": [
     "#### Explaining Structure Access Expressions\n",
     "\n",
-    "Note that we're using [`.struct`](https://docs.getdaft.io/en/v0.4.6/api_docs/doc_gen/expression_methods/daft.struct.html) to construct an expression that allows Daft to extract individual field values from our complex document structure.\n",
+    "Note that we're using [`.struct`](https://docs.daft.ai/en/stable/api/expressions/#daft.expressions.struct) to construct an expression that allows Daft to extract individual field values from our complex document structure.\n",
     "\n",
     "When write `col(\"text_blocks\").struct.get(\"bounding_box\")`, we're telling Daft that we want to access the `bounding_box` field of each element from the `text_blocks` column. From this, we can provide additional field-selecting logic (e.g. `[\"x\"]` to get the value for field `x` on the `bounding_box` value from each structure in `text_blocks`)."
    ]
@@ -2301,7 +2301,7 @@
    "source": [
     "#### Writing to Parquet\n",
     "\n",
-    "In Daft, [DataFrames are _lazy_](https://docs.getdaft.io/en/stable/core_concepts/#dataframe): they are only evaluated once it is necessary.\n",
+    "In Daft, [DataFrames are _lazy_](https://docs.daft.ai/en/stable/quickstart/#execute-your-dataframe-and-view-data): they are only evaluated once it is necessary.\n",
     "\n",
     "By invoking the [`write_parquet`](https://docs.daft.ai/en/stable/api/io/#daft.dataframe.DataFrame.write_parquet) method, we force the DataFrame to evaluate so that its contents can be written out to disk!\n",
     "\n",
