--- a/tutorials/document_processing/document_processing_tutorial.ipynb
+++ b/tutorials/document_processing/document_processing_tutorial.ipynb
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "! pip install daft[aws] pillow pydantic PyMuPDF pytesseract sentence-transformers pydantic-to-pyarrow pdf2image accelerate"
+    "! pip install daft pillow pydantic PyMuPDF pytesseract sentence-transformers pydantic-to-pyarrow pdf2image accelerate"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CI = False"
+    "CI: bool = False"
    ]
   },
   {
@@ -236,7 +236,9 @@
     "import io\n",
     "import traceback\n",
     "from collections.abc import Iterator\n",
+    "from contextlib import ExitStack\n",
     "from datetime import datetime\n",
+    "from tempfile import TemporaryDirectory\n",
     "from typing import Any, Optional, Union, get_args, get_origin\n",
     "\n",
     "import fitz\n",
@@ -1289,27 +1291,38 @@
    },
    "outputs": [],
    "source": [
+    "# The text embedding model to use. See HuggingFace for a more complete list!\n",
+    "MODEL_NAME: str = \"all-MiniLM-L6-v2\"\n",
+    "# Make sure this is aligned to your model name!\n",
+    "EMBEDDING_DIM: int = 384\n",
+    "\n",
+    "\n",
     "@udf(\n",
-    "    return_dtype=daft.DataType.embedding(daft.DataType.float32(), 384),\n",
+    "    return_dtype=daft.DataType.embedding(daft.DataType.float32(), EMBEDDING_DIM),\n",
     "    num_gpus=1,\n",
     "    concurrency=1,  # setting concurrency to initialize model once\n",
     ")\n",
     "class TextEmbedder:\n",
-    "    def __init__(self, model_name: str):\n",
-    "        model = SentenceTransformer(model_name)\n",
-    "        model.to(\"cuda\")\n",
-    "        model.eval()\n",
-    "\n",
+    "    def __init__(self, device: str) -> None:\n",
+    "        print(f\"Loading {MODEL_NAME} ({EMBEDDING_DIM}) onto {device=}\")\n",
+    "        self.device = device\n",
+    "        model = SentenceTransformer(MODEL_NAME, device=self.device)\n",
+    "        if model.get_sentence_embedding_dimension() != EMBEDDING_DIM:\n",
+    "            raise ValueError(\n",
+    "                f\"Expecting {MODEL_NAME} to produce embeddings of size {EMBEDDING_DIM} but it actually is {model.get_sentence_embedding_dimension()}\"\n",
+    "            )\n",
     "        try:\n",
     "            model.compile()\n",
     "        except Exception:\n",
-    "            print(\"Could not torch.compile the SentenceTransformer model. \" \"Proceeding with unoptimized inference.\")\n",
+    "            print(\n",
+    "                \"[SKIP] Could not torch.compile the SentenceTransformer model. Proceeding with unoptimized inference.\"\n",
+    "            )\n",
     "            traceback.print_exc()\n",
-    "\n",
+    "        model = model.eval()\n",
     "        self.model = model\n",
     "\n",
     "    def __call__(self, texts: Series) -> Series:\n",
-    "        with torch.no_grad():\n",
+    "        with torch.inference_mode():\n",
     "            embeddings: np.ndarray[float] = self.model.encode(\n",
     "                texts.to_pylist(), convert_to_numpy=True, show_progress_bar=False\n",
     "            )\n",
@@ -1654,8 +1667,16 @@
     "    group_paragraphs=True,\n",
     ")\n",
     "\n",
-    "# The text embedding model to use. See HuggingFace for a more complete list!\n",
-    "model_name = \"all-MiniLM-L6-v2\""
+    "# explicitly set the device for the text embedding model here\n",
+    "# device: str =\n",
+    "# Or, leave in the following code to use the best device available. Works with Apple Silicon too! (device=\"mps\")\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device: str = \"mps\"\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = \"cuda\"\n",
+    "else:\n",
+    "    device = \"cpu\"\n",
+    "print(f\"Using device: {device}\")"
    ]
   },
   {
@@ -2068,8 +2089,7 @@
    },
    "outputs": [],
    "source": [
-    "embedder = TextEmbedder.with_init_args(model_name=model_name)\n",
-    "df = df.with_column(\"embeddings\", embedder(col(\"text\")))"
+    "df = df.with_column(\"embeddings\", TextEmbedder.with_init_args(device)(col(\"text\")))"
    ]
   },
   {
@@ -2866,10 +2886,14 @@
     }
    ],
    "source": [
-    "output_dir = \"./doc_proc_tutorial_parquet\"\n",
-    "print(f\"Writing out as Parquet files to: {output_dir}\")\n",
+    "with ExitStack() as stack:\n",
+    "    if CI:\n",
+    "        output_dir: str = stack.enter_context(TemporaryDirectory())\n",
+    "    else:\n",
+    "        output_dir = \"./doc_proc_tutorial_parquet\"\n",
+    "    print(f\"Writing out as Parquet files to: {output_dir}\")\n",
+    "    parquet_out = df.write_parquet(output_dir).to_pydict()\n",
     "\n",
-    "parquet_out = df.write_parquet(output_dir).to_pydict()\n",
     "print(f\"Complete! Wrote {df.count_rows()} rows:\\n{parquet_out}\")"
    ]
   }
