into_batches(32) before decoding images

--- a/tutorials/visual_llm_inference/visual_llm_inference_tutorial.ipynb
+++ b/tutorials/visual_llm_inference/visual_llm_inference_tutorial.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0a423274",
    "metadata": {},
    "outputs": [
@@ -110,10 +110,10 @@
     "import os\n",
     "\n",
     "import torch\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from transformers import AutoModelForCausalLM\n",
     "from PIL import Image\n",
     "import daft\n",
-    "from daft import Series, col, udf\n",
+    "from daft import col\n",
     "from daft.io import IOConfig, HuggingFaceConfig"
    ]
   },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "176ce059",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
     "else:\n",
     "    raise ValueError(\"Need HF_TOKEN as environment variable! Or supply directly here!\")\n",
     "    # token=...\n",
-    "io_config = IOConfig(hf= HuggingFaceConfig(token=token))\n",
+    "io_config = IOConfig(hf=HuggingFaceConfig(token=token))\n",
     "del token"
    ]
   },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8ed72b69",
    "metadata": {},
    "outputs": [
@@ -639,6 +639,7 @@
    "source": [
     "df = (\n",
     "    df\n",
+    "    .into_batches(32)\n",
     "    .with_column(\"path\", col('image').struct.get('path'))\n",
     "    .with_column('bytes', col('image').struct.get('bytes'))\n",
     "    .with_column('image', col('bytes').image.decode())\n",
@@ -2119,7 +2120,7 @@
     }
    ],
    "source": [
-    "df_full = moonbeam_inference(df.into_batches(32))\n",
+    "df_full = moonbeam_inference(df)\n",
     "df_full.write_parquet(\"./small_imagenet_moonbeam_v2_inference\")"
    ]
   }
